Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 4.037 devel


* Verilator 4.036 2020-06-06

**    OPT_FAST is now -Os by default. See the BENCHMARKING & OPTIMIZATION part
      of the manual if you experience issues with compilation speed.

***   Configure now enables SystemC if it is installed as a system headers,
      e.g. with 'apt-get install systemc-dev'.

***   Add --waiver-output flag that writes a verilator config file (.vlt) with
      waivers to the warnings emitted during a Verilator run.

***   Support verilator_coverage --write-info for lcov HTML reports.
      Line Coverage now tracks all statement lines, not just branch lines.

***   --output-split is now on by default. VM_PARALLEL_BUILDS is set by
      default iff the --output-split caused an actual file split to occur.
      --output-split-cfuncs and --output-split-ctrace now default to the
      value of --output-split. These changes should improve build times of
      medium and large designs with default options. User makefiles may
      require changes.

***   The run-time library is now compiled with -Os by default. (#2369, #2373)

****  Support multi channel descriptor I/O (#2190) [Stephen Henry]

****  Support $countbits. (#2287) [Yossi Nivin]

****  Support $isunbounded and parameter $. (#2104)

****  Support unpacked array .sum and .product.

****  Support prefix/postfix increment/decrement. (#2223) [Maciej Sobkowski]

****  Fix FST tracing of little bit endian signals. [Geza Lore]

****  Fix +: and -: on unpacked arrays. (#2304) [engr248]

****  Fix $isunknown with constant Z's.

****  Fix queues and dynamic array wide ops. (#2352) [Vassilis Papaefstathiou]


* Verilator 4.034 2020-05-03

**    Add simplistic class support with many restrictions, see manual. (#377)

**    Support IEEE time units and time precisions. (#234)
      Includes `timescale, $printtimescale, $timeformat.