@@ -1,0 +1,31 @@
+%Error: t/t_with_unsup.v:19:31: Unsupported: 'with' on function call
+   19 |       found = aliases.find(i) with (i == to_find);
+      |                               ^~~~
+%Error: t/t_with_unsup.v:21:23: Unsupported: 'with' on task call
+   21 |       aliases.find(i) with (i == to_find);
+      |                       ^~~~
+%Error: t/t_with_unsup.v:24:28: Unsupported: 'with' on function call
+   24 |       found = aliases.find with (item == i);
+      |                            ^~~~
+%Error: t/t_with_unsup.v:25:20: Unsupported: 'with' on function call
+   25 |       aliases.find with (item == i);
+      |                    ^~~~
+%Error: t/t_with_unsup.v:29:36: Unsupported: 'with' on method call
+   29 |       found = aliases.unique with (id);
+      |                                    ^~
+%Error: t/t_with_unsup.v:30:38: Unsupported: 'with' on method call
+   30 |       found = aliases.unique() with (id);
+      |                                      ^~
+%Error: t/t_with_unsup.v:31:39: Unsupported: 'with' on method call
+   31 |       found = aliases.unique(i) with (id);
+      |                                       ^~
+%Error: t/t_with_unsup.v:32:32: Unsupported: 'with' on method call
+   32 |       found = aliases.or with (id);
+      |                                ^~
+%Error: t/t_with_unsup.v:33:33: Unsupported: 'with' on method call
+   33 |       found = aliases.and with (id);
+      |                                 ^~
+%Error: t/t_with_unsup.v:34:33: Unsupported: 'with' on method call
+   34 |       found = aliases.xor with (id);
+      |                                 ^~
+%Error: Exiting due to
